<resources>
    <string name="app_name">StudentsCouncil</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email / Username</string>
    <string name="enter_description">Enter Description</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="solution">Enter Solution</string>
    <string name="council">Council</string>
    <string name="student">Student</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_report">Report</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">logout</string>
    <string name="no_results_found">No Results Found</string>
    <string name="report_now">Report Now</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>

    <string-array name="category">
        <item>Select Category</item>
        <item>Discipline</item>
        <item>General Concerns</item>
        <item>Council Admins</item>
    </string-array>

    <string-array name="solution">
        <item>Solution State</item>
        <item>In Progress</item>
        <item>Resolved</item>
        <item>Rejected</item>
    </string-array>
</resources>